Raise -Xmx for tomcat against java.lang.OutOfMemoryError: Java heap space